@@ -1,0 +1,55 @@
+/*
+ * aTunes 2.1.0-SNAPSHOT
+ * Copyright (C) 2006-2010 Alex Aranda, Sylvain Gaudard, Thomas Beckers and contributors
+ *
+ * See http://www.atunes.org/wiki/index.php?title=Contributing for information about contributors
+ *
+ * http://www.atunes.org
+ * http://sourceforge.net/projects/atunes
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ */
+
+package net.sourceforge.atunes.gui.lookandfeel;
+
+import java.awt.Component;
+
+import javax.swing.JTabbedPane;
+
+/**
+ * Common interface for tab close listeners
+ * @author fleax
+ *
+ */
+public interface TabCloseListener {
+	
+	/**
+	 * Called when a tab is being closed
+	 * @param tabbedPane
+	 * @param component
+	 */
+	public void tabClosing(JTabbedPane tabbedPane, Component component);
+	
+	/**
+	 * Called when a tab has been closed
+	 * @param tabbedPane
+	 * @param component
+	 */
+	public void tabClosed(JTabbedPane tabbedPane, Component component);
+	
+	/**
+	 * Called to veto a tab closing. If returns <code>true</code> tab won't be closed
+	 * @param tabbedPane
+	 * @param component
+	 * @return
+	 */
+	public boolean vetoTabClosing(JTabbedPane tabbedPane, Component component);
+}
